# clean-up-clawd

./: README.md  app.py  clean-up-clawd.spec  dir-cleaner.spec  main.py  pyproject.toml  scanner.py  styles.tcss
homebrew/: build_release.sh
