[project]
name = "clean-up-clawd"
version = "1.0.0"
description = "A beautiful TUI app to clean up directories by removing junk folders (node_modules, __pycache__) and files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sahil"}
]
keywords = ["cli", "tui", "cleanup", "directory", "node_modules", "cache", "disk-space"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/sahil/clean-up-clawd"
Repository = "https://github.com/sahil/clean-up-clawd"

[project.scripts]
clean-up-clawd = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
